Bug 212897 - USB audio bad decibel data: ID 1395:0025 Sennheiser Communications Headset [PC 8]
Summary: USB audio bad decibel data: ID 1395:0025 Sennheiser Communications Headset [P...
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-30 15:31 UTC by Timo Gurr
Modified: 2021-05-04 08:04 UTC (History)
2 users (show)

See Also:
Kernel Version: 5.11.4
Subsystem:
Regression: No
Bisected commit-id:


Attachments
alsa-info.txt.sennheiser.pc8 (58.84 KB, text/plain)
2021-04-30 15:31 UTC, Timo Gurr
Details
linux-5.12-sennheiser-pc8.patch (981 bytes, patch)
2021-04-30 18:04 UTC, Timo Gurr
Details | Diff
0001-ALSA-usb-audio-Add-dB-range-mapping-for-Sennheiser-C.patch (1.75 KB, patch)
2021-05-03 10:57 UTC, Timo Gurr
Details | Diff

Description Timo Gurr 2021-04-30 15:31:01 UTC
Created attachment 296551 [details]
alsa-info.txt.sennheiser.pc8

After recently switching from Pulseaudio to Pipewire I'm hitting a problem with the usb headset:

ID 1395:0025 Sennheiser Communications Headset [PC 8]

Apr 30 17:20:07 exherbo pipewire-media-session[68661]: The decibel volume range for element 'Headphone' (-2837 dB - -6 dB) has negative maximum. Disabling the decibel range.

It has been already reported at the Pipewire bugtracker where I also added some information I found out:
https://gitlab.freedesktop.org/pipewire/pipewire/-/issues/1049

like after searching about the topic and possible solutions I came across:
https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/commit/sound/usb?id=21cba9c5359dd9d1bffe355336cfec0b66d1ee52
and
https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/commit/sound/usb?id=2d1cb7f658fb9c3ba8f9dab8aca297d4dfdec835
and
https://bugzilla.kernel.org/show_bug.cgi?id=211929

so I thought I'll better report it directly here as well, I'd have liked to come up with a patch but I have no idea what correct values would look like. Attached is the alsa-info.sh output.
Comment 1 Timo Gurr 2021-04-30 18:04:43 UTC
Created attachment 296555 [details]
linux-5.12-sennheiser-pc8.patch

Proposed patch, not sure if things are correct but it fixes:

* pipewire-media-session complaining about the decibel volume range having a negative maximum
* volume level below ~25% already muted the sound

I took the -9500 from a product sheet PDF stating 95dB: https://sennheiser.pl/d/817aff6d02bcc04e331a9a4eca22e69a
Comment 2 Sebastian Grabowski 2021-05-02 17:13:23 UTC
I can confirm that this patch fixes the volume problems with my headphones (tested with Kernel Version 5.11.16).
Comment 3 Takashi Iwai 2021-05-03 08:51:55 UTC
Could you provide the proper patch with your Signed-off-by line, as well as the subject and the patch descriptions?  Then I can submit and merge it to upstream.  The sign-off is mandatory from legal reasons.

See Documentation/process/submitting-patches.rst for details.
Comment 4 Timo Gurr 2021-05-03 10:57:40 UTC
Created attachment 296595 [details]
0001-ALSA-usb-audio-Add-dB-range-mapping-for-Sennheiser-C.patch

Attached you'll find the updated git format patch. Hopefully everything is correct and the explanation is sufficient. Please let me know if not.
Comment 5 Takashi Iwai 2021-05-03 11:07:46 UTC
Looks good.  I'm going to submit and merge it.  Thanks!
Comment 6 Takashi Iwai 2021-05-04 08:04:42 UTC
The patch was merged in sound.git tree.  It will be included in the upstream 5.13-rc1, likely in the next week.

Note You need to log in before you can comment on or make changes to this bug.